--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
         <canvas id="canvas" ></canvas>
+        <canvas id="result" ></canvas>
 
         <script type="text/javascript" src = 'Js/Base.js'></script>
 </body>
